Feat add dragon egg animation

--- a/src/pages/styles/dragon.scss
+++ b/src/pages/styles/dragon.scss
@@ -33,7 +33,7 @@
 .dragonHeader::before {
   content: '';
   position: absolute;
-  background-image: url('../../assets/images/DragonBgNew.png');
+  background-image: url('../../assets/images/dragon_egg_unhatched_v2_compressed.png');
   background-size: auto 100%;
   background-repeat: no-repeat;
   background-position: top right;
@@ -41,7 +41,22 @@
   right: 0px;
   bottom: 0px;
   left: 0px;
-  opacity: 0.5;
+  opacity: 0.2;
+  cursor: pointer;
+  transition: all 100ms ease-in-out;
+}
+
+.dragonHeader:hover::before{
+  opacity: 1;
+}
+
+.dragonEggHatched.dragonHeader::before{
+  animation: dragon-egg-hatched 3s 1;
+}
+
+@keyframes dragon-egg-hatched {
+  from {background-image: url('../../assets/images/unhatched_egg_-_analytics_compressed.png');}
+  to {background-image: url('../../assets/images/dragon_egg_hatched_-_analytics_compressed.png');}
 }
 
 .dragonHeader {
@@ -268,9 +283,10 @@
   border-radius: 12px;
   border: unset;
   color: #f6f6f9;
-  & .MuiButton-root {
-    width: 100%;
-  }
+}
+
+.MuiButton-root {
+  width: 100%;
 }
 
 .dragonInfoWrapper {
@@ -431,20 +447,20 @@
     gap: 12px;
 
     h5 {
-      font-size: 20px;
+      font-size: 20px
     }
     small {
       font-size: 14px;
       color: #7d95b8;
     }
   }
-  .chart-type {
+  .chart-type{
     display: flex;
     align-items: center;
     gap: 8px;
     margin-top: 18px;
 
-    .chart-type-button {
+    .chart-type-button{
       display: flex;
       align-items: center;
       justify-content: center;
@@ -453,11 +469,11 @@
       cursor: pointer;
       font-size: 12px;
     }
-    .selected {
+    .selected{
       border-radius: 10px;
       background-color: #374769;
     }
-    .unselected {
+    .unselected{
       color: #6880a3;
     }
   }
